# ProjectAgnes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: language-guard.yml
agnes/: __init__.py  black_box.py  evidence.py  hypothesis_engine.py  nodes.py  veto_engine.py
agnes.egg-info/: PKG-INFO  SOURCES.txt
docs/: BENCH_TEST_CHECKLIST_v0.1.md  DEVELOPMENT_LOG_2026-02-21_ENVIRONMENTAL_N16R8_BENCH_PASS.md  DEVELOPMENT_LOG_2026-02-21_FIRST_WEARABLE_BENCH_PASS.md  DEVELOPMENT_LOG_2026-02-21_HARDWARE_ROLE_REMAP_N16R8_HUB_N8R2_ENV.md  DEVELOPMENT_LOG_2026-02-21_HUB_N16R8_AND_ENV_N8R2_BENCH_PASS.md  ENGINEERING_MVP_PLAN.md  ENGINEERING_MVP_PORTFOLIO_v0.1.md  FIRST_BENCH_BRINGUP_GUIDE_v0.1.md  FUTURE_AI_SUPERVISOR_LAYER_v0.1.md  HUB_NEXTION_UART_PROTOCOL_v0.1.md  LANGUAGE_POLICY.md  NODE_HUB_MESSAGE_SCHEMA_v0.1.md
firmware/: platformio.ini
firmware/boards/: esp32-s3-devkitc-1-n16r8.json  esp32-s3-devkitc-1-n8r2.json
firmware/include/: agnes_messages.h
firmware/src/common/: agnes_messages.cpp
firmware/src/environmental/: main.cpp
firmware/src/hub/: main.cpp
firmware/src/wearable/: main.cpp
tests/: test_black_box.py  test_evidence.py  test_hypothesis_engine.py  test_nodes.py  test_veto_engine.py
